force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <label>Agente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>