force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Ancho_cm__c.field-meta.xml
<CustomField>
    <fullName>Ancho_cm__c</fullName>
    <label>Ancho (cm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>