force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Cantidad_de_Paquetes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Paquetes__c</fullName>
    <label>Cantidad de Paquetes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>