force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <formula>Direccion_Remitente__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>