force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Ciudad_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_Entrega__c</fullName>
    <formula>Direccion_de_Entrega__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad de Entrega</label>
    <type>Text</type>
</CustomField>