force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Ciudad_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Destinatario__c</fullName>
    <label>Ciudad Destinatario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>