force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Cod_Pais__c.field-meta.xml
<CustomField>
    <fullName>Cod_Pais__c</fullName>
    <formula>Direccion_Remitente__r.Cod_Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod País</label>
    <type>Text</type>
</CustomField>