force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Cod_Pais_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Cod_Pais_de_Entrega__c</fullName>
    <formula>Direccion_de_Entrega__r.Cod_Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod País de Entrega</label>
    <type>Text</type>
</CustomField>