force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <formula>Direccion_Remitente__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Postal</label>
    <type>Text</type>
</CustomField>