force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Codigo_Postal_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_de_Entrega__c</fullName>
    <formula>Direccion_de_Entrega__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Postal de Entrega</label>
    <type>Text</type>
</CustomField>