force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Contacto_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Contacto_de_Entrega__c</fullName>
    <label>Contacto de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>