force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Contacto_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Destinatario__c</fullName>
    <description>Se ajusta etiqueta por error en nomenclatura del proceso</description>
    <label>Contacto Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>