force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Contacto_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Remitente__c</fullName>
    <label>Contacto Remitente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>