force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Correo_Electronico_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Destinatario__c</fullName>
    <label>Correo Electrónico Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>