force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Correo_Electronico_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Remitente__c</fullName>
    <label>Correo Electrónico Remitente</label>
    <type>Email</type>
</CustomField>