force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de Pickup</relationshipLabel>
    <relationshipName>Guias_Exportacion</relationshipName>
    <type>Lookup</type>
</CustomField>