force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Direccion_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección de Entrega</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direcciones__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Direcciones__c</referenceTo>
    <relationshipLabel>Solicitudes de Pickup (Dirección de Entrega)</relationshipLabel>
    <relationshipName>Solicitudes_de_Pickup1</relationshipName>
    <type>Lookup</type>
</CustomField>