force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Direccion_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Destinatario__c</fullName>
    <label>Dirección Destinatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>