force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Direccion_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Remitente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección Remitente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direcciones__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Direcciones__c</referenceTo>
    <relationshipLabel>Solicitudes de Pickup</relationshipLabel>
    <relationshipName>Gu_as_Exportaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>