force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Divisa__c.field-meta.xml
<CustomField>
    <fullName>Divisa__c</fullName>
    <label>Divisa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>