force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Embalaje__c.field-meta.xml
<CustomField>
    <fullName>Embalaje__c</fullName>
    <label>Embalaje</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Su Embalaje</fullName>
            </value>
            <value>
                <fullName>FedEx Pak</fullName>
            </value>
            <value>
                <fullName>FedEx Box</fullName>
            </value>
            <value>
                <fullName>FedEx Tube</fullName>
            </value>
            <value>
                <fullName>FedEx Envelope</fullName>
            </value>
            <value>
                <fullName>FedEx 10kg Box</fullName>
            </value>
            <value>
                <fullName>FedEx 25kg Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>