force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Embalaje_HOT__c.field-meta.xml
<CustomField>
    <fullName>Embalaje_HOT__c</fullName>
    <label>Embalaje HOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sobre</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Cajas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>