force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Estado_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Estado_Pickup__c</fullName>
    <label>Estado Importación Agente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>