force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
            </value>
            <value>
                <fullName>Enviado Agente</fullName>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>