force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Facturar_Aranceles_e_Impuestos__c.field-meta.xml
<CustomField>
    <fullName>Facturar_Aranceles_e_Impuestos__c</fullName>
    <label>Facturar Aranceles e Impuestos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>