force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Facturar_Envio_a__c.field-meta.xml
<CustomField>
    <fullName>Facturar_Envio_a__c</fullName>
    <label>Facturar Envío a</label>
    <length>20</length>
    <type>Text</type>
</CustomField>