force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Guia_validada__c.field-meta.xml
<CustomField>
    <fullName>Guia_validada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guía Validada</label>
    <type>Checkbox</type>
</CustomField>