force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Largo_cm__c.field-meta.xml
<CustomField>
    <fullName>Largo_cm__c</fullName>
    <label>Largo (cm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>