force-app/main/default/objects/Solicitud_de_Pickup__c/fields/N_Cuenta_1__c.field-meta.xml
<CustomField>
    <fullName>N_Cuenta_1__c</fullName>
    <label>Nº Cuenta 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>