force-app/main/default/objects/Solicitud_de_Pickup__c/fields/N_Cuenta_2__c.field-meta.xml
<CustomField>
    <fullName>N_Cuenta_2__c</fullName>
    <label>Nº Cuenta 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>