force-app/main/default/objects/Solicitud_de_Pickup__c/fields/N_de_Guia__c.field-meta.xml
<CustomField>
    <fullName>N_de_Guia__c</fullName>
    <label>Etiqueta Agente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>