force-app/main/default/objects/Solicitud_de_Pickup__c/fields/N_IVA_ID_WIN_Aduanal__c.field-meta.xml
<CustomField>
    <fullName>N_IVA_ID_WIN_Aduanal__c</fullName>
    <label>Nº IVA/ID/WIN Aduanal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>