force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Pais_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Entrega__c</fullName>
    <formula>Direccion_de_Entrega__r.Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pais de Entrega</label>
    <type>Text</type>
</CustomField>