force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Pais_Territorio_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Pais_Territorio_Remitente__c</fullName>
    <label>País/Territorio Remitente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>