force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Peso_Agente__c.field-meta.xml
<CustomField>
    <fullName>Peso_Agente__c</fullName>
    <label>Peso Agente</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>