force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>Total_Costos_Facturados__c + Total_Costos_sin_Facturar__c - Total_Costos_Agente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>