force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Provincia_Estado_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Estado_Destinatario__c</fullName>
    <label>Provincia/Estado Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>