force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Tarifa_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Detalle_Tarifa__c.Tarifa__r.Tipo_Tarifa__c</field>
            <operation>equals</operation>
            <value>Importación</value>
        </filterItems>
        <filterItems>
            <field>Detalle_Tarifa__c.Kilos__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.Peso_Total__c</valueField>
        </filterItems>
        <filterItems>
            <field>Detalle_Tarifa__c.Embalaje__c</field>
            <operation>equals</operation>
            <valueField>$Source.Embalaje_HOT__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Detalle_Tarifa__c</referenceTo>
    <relationshipLabel>Solicitudes de Pickup</relationshipLabel>
    <relationshipName>Solicitudes_de_Pickup</relationshipName>
    <type>Lookup</type>
</CustomField>