force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Telefono_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_Entrega__c</fullName>
    <label>Teléfono de Entrega</label>
    <type>Phone</type>
</CustomField>