force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Telefono_Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Destinatario__c</fullName>
    <label>Teléfono Destinatario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>