force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Telefono_Remitente__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Remitente__c</fullName>
    <label>Teléfono Remitente</label>
    <type>Phone</type>
</CustomField>