force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Total_Costos_Agente__c.field-meta.xml
<CustomField>
    <fullName>Total_Costos_Agente__c</fullName>
    <label>Total Costos Agente</label>
    <summarizedField>Costo_Agente_Importacion__c.Valor__c</summarizedField>
    <summaryForeignKey>Costo_Agente_Importacion__c.Solicitud_de_Pickup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>