force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Unidad_de_Medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Medida__c</fullName>
    <label>Unidad de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilogramos</fullName>
                <default>true</default>
                <label>Kilogramos</label>
            </value>
            <value>
                <fullName>Libras</fullName>
            </value>
            <value>
                <fullName>Onza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>