force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Valor_Combustible__c.field-meta.xml
<CustomField>
    <fullName>Valor_Combustible__c</fullName>
    <formula>Combustible__c * Valor_Cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Combustible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>