force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Valor_de_Aduana__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Aduana__c</fullName>
    <label>Valor de Aduana</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>