force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Valor_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Valor_Transporte__c</fullName>
    <label>Valor Transporte</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>