force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Zona_Fedex__c.field-meta.xml
<CustomField>
    <fullName>Zona_Fedex__c</fullName>
    <formula>text(Direccion_Remitente__r.Pais__r.Zona_Fedex__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona Fedex</label>
    <type>Text</type>
</CustomField>