force-app/main/default/objects/Solicitud_de_Pickup__c/fields/Zona_HOT__c.field-meta.xml
<CustomField>
    <fullName>Zona_HOT__c</fullName>
    <formula>Direccion_Remitente__r.Zona_Hot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona HOT</label>
    <type>Text</type>
</CustomField>